hw8-gc first iteration