@@ -1,4 +1,4 @@
-package ru.otus.gc.bench;
+package ru.otus.gc.hw08;
 
 import com.sun.management.GarbageCollectionNotificationInfo;
 
@@ -10,58 +10,20 @@ import javax.management.openmbean.CompositeData;
 import java.lang.management.GarbageCollectorMXBean;
 import java.lang.management.ManagementFactory;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
 
-/*
-О формате логов
-http://openjdk.java.net/jeps/158
-
-
--Xms512m
--Xmx512m
--Xlog:gc=debug:file=./logs/gc-%p-%t.log:tags,uptime,time,level:filecount=5,filesize=10m
--XX:+HeapDumpOnOutOfMemoryError
--XX:HeapDumpPath=./logs/dump
--XX:+UseG1GC
-*/
-
-/*
-1)
-    default, time: 83 sec (82 without Label_1)
-2)
-    -XX:MaxGCPauseMillis=100000, time: 82 sec //Sets a target for the maximum GC pause time.
-3)
-    -XX:MaxGCPauseMillis=10, time: 91 sec
-
-4)
--Xms2048m
--Xmx2048m
-    time: 81 sec
-
-5)
--Xms5120m
--Xmx5120m
-    time: 80 sec
-
-5)
--Xms20480m
--Xmx20480m
-    time: 81 sec (72 without Label_1)
-
-*/
-
-public class GcDemo {
-    public static void main(String... args) throws Exception {
-        System.out.println("Starting pid: " + ManagementFactory.getRuntimeMXBean().getName());
+public class OomExample {
+    public static void main(String[] args) throws Exception {
+        final String mxBeanName = ManagementFactory.getRuntimeMXBean().getName();
+        System.out.println("Starting pid: " + mxBeanName);
         switchOnMonitoring();
         long beginTime = System.currentTimeMillis();
 
-        int size = 5 * 1000 * 1000;
-        int loopCounter = 1000;
-        //int loopCounter = 100000;
+        int size = 1 * 1_000;
         MBeanServer mbs = ManagementFactory.getPlatformMBeanServer();
         ObjectName name = new ObjectName("ru.otus:type=Benchmark");
 
-        Benchmark mbean = new Benchmark(loopCounter);
+        CustomBenchmark mbean = new CustomBenchmark();
         mbs.registerMBean(mbean, name);
         mbean.setSize(size);
         mbean.run();
@@ -76,19 +38,23 @@ public class GcDemo {
         for (GarbageCollectorMXBean gcbean : gcbeans) {
 
             System.out.println("GC name:" + gcbean.getName());
+            AtomicInteger gcCount = new AtomicInteger();
 
             NotificationEmitter emitter = (NotificationEmitter) gcbean;
             NotificationListener listener = (notification, handback) -> {
                 if (notification.getType().equals(GarbageCollectionNotificationInfo.GARBAGE_COLLECTION_NOTIFICATION)) {
                     GarbageCollectionNotificationInfo info = GarbageCollectionNotificationInfo.from((CompositeData) notification.getUserData());
+
                     String gcName = info.getGcName();
                     String gcAction = info.getGcAction();
-                    String gcCause = info.getGcCause();
 
-                    long startTime = info.getGcInfo().getStartTime();
                     long duration = info.getGcInfo().getDuration();
 
-                    System.out.println("start:" + startTime + " Name:" + gcName + ", action:" + gcAction + ", gcCause:" + gcCause + "(" + duration + " ms)");
+                    if (gcAction != null){
+                        gcCount.getAndIncrement();
+                    }
+
+                    System.out.println("Name:" + gcName + ", action:" + gcAction + ", Количество сборок: "+ gcCount + ", длительность: " + duration + " ms)");
                 }
             };
             emitter.addNotificationListener(listener, null, null);
@@ -97,4 +63,5 @@ public class GcDemo {
 
         }
     }
+
 }
